--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,103 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #22254b;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  margin: 0;
+}
+
+header{
+  background-color: #373b69;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search{
+  padding: 0.5rem 1.5rem;
+  background-color: transparent;
+  border: 1px solid #22254b;
+  font-size: 1rem;
+  font-family: inherit;
+  border-radius: 50px;
+  color: #fff;
+}
+
+.search:focus{
+  outline: 0;
+}
+
+.movie__container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.movie{
+  background-color: #373b69;
+  border-radius: 3px;
+  width: 250px;
+  margin: 1rem;
+  box-shadow: 3px 3px 7px rgba(0,0,0,0.2);
+  overflow: hidden;
+  position: relative;
+}
+
+.movie img{
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+.movie__info{
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.movie__info h3{
+  margin: 0;
+}
+
+.movie__overview{
+  position: absolute;
+  background-color: #fff;
+  padding: 1rem;
+  color: #373b69;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  max-height: 100%;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie__overview{
+  transform: translate(0%);
+}
+
+.tag{
+  background-color: #22254b;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.tag.green{
+  color: rgb(69, 223, 69);
+}
+.tag.orange{
+  color: orange;
+}
+.tag.red{
+  color: red;
 }
